--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Coffeeroasters</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="./css/main.css">
-</head
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Coffeeroasters</title>
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="./css/main.css">
+</head>
 <body>
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-inner">
-				<a class="logo" href="./index.html"><img src="images/logo.svg" alt="site logo"></a>
+				<a class="logo" href="./index.html">
+					<img src="images/logo.svg" width="235" height="24" alt="site logo">
+				</a>
 				<nav class="site-nav">
 					<ul class="sitenav-list">
 						<li class="sitenav-item">
-							<a href="">HOME</a>
+							<a href="#">HOME</a>
+							
 						</li>
 						<li class="sitenav-item">
-							<a href="">ABOUT US</a>
+							<a href="#">ABOUT US</a>
 						</li>
 						<li class="sitenav-item">
-							<a href="">Create your plan</a>
+							<a href="#">Create your plan</a>
 						</li>
 					</ul>
 				</nav>
@@ -42,7 +45,8 @@
 							<a href="#">Create your plan</a>
 						</div>
 						<div class="section-img">
-							<img src="images/header img.jpg" alt="">
+							<img src="images/header-img.jpg" width="710"
+							height="696" alt="img-header">
 							<div class="img"></div>
 						</div>
 					</div>
@@ -52,54 +56,54 @@
 				<div class="container">
 					<div class="section-blok">
 						<h2>our collection</h2>
-							<ul class="section-wrapper-blok">
-								<li>
-									<div class="section-blok-box">
-										<div class="coffe-img"></div>
-										<img src="images/danche.png" alt="danchi">
-										<div class="section-blok-text">
-											<h3>Danche</h3>
-											<p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
-											</p>
-										</div>
+						<ul class="section-wrapper-blok">
+							<li>
+								<div class="section-blok-box">
+									<div class="coffe-img"></div>
+									<img src="images/danche.png" alt="danchi">
+									<div class="section-blok-text">
+										<h3>Danche</h3>
+										<p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
+										</p>
 									</div>
-								</li>
-								<li>
-									<div class="section-blok-box">
-										<div class="section-blok-text">
-											<h3>Gran Espresso</h3>
-											<p>Light and flavorful blend with cocoa and black pepper for an intense
-												experience.
-											</p>
-										</div>
-										<img src="images/grand espresso.png" alt="danchi">
-										<div class="coffe-img-one"></div>
+								</div>
+							</li>
+							<li>
+								<div class="section-blok-box">
+									<div class="section-blok-text">
+										<h3>Gran Espresso</h3>
+										<p>Light and flavorful blend with cocoa and black pepper for an intense
+											experience.
+										</p>
 									</div>
-								</li>
-								<li>
-									<div class="section-blok-box">
-										<div class="coffe-img-two"></div>
-										<img src="images/piccollo.png" alt="danchi">
-										<div class="section-blok-text">
-											<h3>Piccollo</h3>
-											<p>Mild and smooth blend featuring notes of toasted almond and dried cherry.
-											</p>
-										</div>
+									<img src="images/grand-espresso.png" alt="espresso">
+									<div class="coffe-img-one"></div>
+								</div>
+							</li>
+							<li>
+								<div class="section-blok-box">
+									<div class="coffe-img-two"></div>
+									<img src="images/piccollo.png" alt="piccollo">
+									<div class="section-blok-text">
+										<h3>Piccollo</h3>
+										<p>Mild and smooth blend featuring notes of toasted almond and dried cherry.
+										</p>
 									</div>
-								</li>
-								<li>
-									<div class="section-blok-box">
-										<div class="coffe-img-four"></div>
-										<div class="section-blok-text">
-											<h3>Planalto</h3>
-											<p>Brazilian dark roast with rich and velvety body, and hints of fruits and
-												nuts.
-											</p>
-										</div>
-										<img src="images/grand espresso.png" alt="danchi">
+								</div>
+							</li>
+							<li>
+								<div class="section-blok-box">
+									<div class="coffe-img-four"></div>
+									<div class="section-blok-text">
+										<h3>Planalto</h3>
+										<p>Brazilian dark roast with rich and velvety body, and hints of fruits and
+											nuts.
+										</p>
 									</div>
-								</li>
-							</ul>
+									<img src="images/planalto.png" alt="planalto">
+								</div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
