--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 							<a href="#">Create your plan</a>
 						</div>
 						<div class="section-img">
-							<img src="images/header-img.jpg" width="710"
+							<img src="images/header-img.jpg" 
+							width="710"
 							height="696" alt="img-header">
 							<div class="img"></div>
 						</div>
