--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Coffeeroasters</title>
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="./css/main.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Coffeeroasters</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
 	<header class="site-header">
 		<div class="container">
@@ -19,7 +21,7 @@
 					<ul class="sitenav-list">
 						<li class="sitenav-item">
 							<a href="#">HOME</a>
-							
+
 						</li>
 						<li class="sitenav-item">
 							<a href="#">ABOUT US</a>
@@ -45,9 +47,7 @@
 							<a href="#">Create your plan</a>
 						</div>
 						<div class="section-img">
-							<img src="images/header-img.jpg" 
-							width="710"
-							height="696" alt="img-header">
+							<img src="images/header-img.jpg" width="710" height="696" alt="img-header">
 							<div class="img"></div>
 						</div>
 					</div>
@@ -58,57 +58,144 @@
 					<div class="section-blok">
 						<h2>our collection</h2>
 						<ul class="section-wrapper-blok">
-							<li>
-								<div class="section-blok-box">
-									<div class="coffe-img"></div>
-									<img src="images/danche.png" alt="danchi">
-									<div class="section-blok-text">
-										<h3>Danche</h3>
-										<p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
-										</p>
-									</div>
+							<li class="section-blok-box">
+								<div class="coffe-img"></div>
+								<img src="images/danche.png" alt="danchi">
+								<div class="section-blok-text">
+									<h3>Danche</h3>
+									<p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
+									</p>
 								</div>
 							</li>
-							<li>
-								<div class="section-blok-box">
-									<div class="section-blok-text">
-										<h3>Gran Espresso</h3>
-										<p>Light and flavorful blend with cocoa and black pepper for an intense
-											experience.
-										</p>
-									</div>
-									<img src="images/grand-espresso.png" alt="espresso">
-									<div class="coffe-img-one"></div>
+							<li class="section-blok-box">
+								<div class="section-blok-text">
+									<h3>Gran Espresso</h3>
+									<p>Light and flavorful blend with cocoa and black pepper for an intense
+										experience.
+									</p>
+								</div>
+								<img src="images/grand-espresso.png" alt="espresso">
+								<div class="coffe-img-one"></div>
+							</li>
+							<li class="section-blok-box">
+								<div class="coffe-img-two"></div>
+								<img src="images/piccollo.png" alt="piccollo">
+								<div class="section-blok-text">
+									<h3>Piccollo</h3>
+									<p>Mild and smooth blend featuring notes of toasted almond and dried cherry.
+									</p>
 								</div>
 							</li>
-							<li>
-								<div class="section-blok-box">
-									<div class="coffe-img-two"></div>
-									<img src="images/piccollo.png" alt="piccollo">
-									<div class="section-blok-text">
-										<h3>Piccollo</h3>
-										<p>Mild and smooth blend featuring notes of toasted almond and dried cherry.
-										</p>
-									</div>
+							<li class="section-blok-box">
+								<div class="coffe-img-four"></div>
+								<div class="section-blok-text">
+									<h3>Planalto</h3>
+									<p>Brazilian dark roast with rich and velvety body, and hints of fruits and
+										nuts.
+									</p>
 								</div>
-							</li>
-							<li>
-								<div class="section-blok-box">
-									<div class="coffe-img-four"></div>
-									<div class="section-blok-text">
-										<h3>Planalto</h3>
-										<p>Brazilian dark roast with rich and velvety body, and hints of fruits and
-											nuts.
-										</p>
-									</div>
-									<img src="images/planalto.png" alt="planalto">
-								</div>
+								<img src="images/planalto.png" alt="planalto">
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
+			<div class="coffe-choose-wrapper">
+
+
+				<div class="section-coffe-choose">
+					<div class="container">
+						<div class="choose-wrapper">
+							<h2>Why choose us?</h2>
+							<p class="choose-text">A large part of our role is choosing which particular coffees will be
+								featured
+								in our range. This means working closely with the best coffee growers to give
+								you a more impactful experience on every level.</p>
+							<div class="choose-blok">
+								<ul class="choose-list">
+									<li class="choose-item">
+										<img src="./images/best-quality.jpg" width: 433; height: 500; alt="">
+										<h3>Best quality</h3>
+										<p>Discover an endless variety of the world’s best artisan coffee from each of
+											our
+											roasters.</p>
+									</li>
+									<li class="choose-item">
+										<img src="images/exclusive-benefits.jpg" width: 433; height: 500; alt="">
+										<h3>Exclusive benefits</h3>
+										<p>Special offers and swag when you subscribe, including 30% off your first
+											shipment.</p>
+									</li>
+									<li class="choose-item">
+										<img src="./images/free-shipping.jpg" width:433; height:500; alt="">
+										<h3>Free shipping</h3>
+										<p>We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+										</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section-pick">
+				<div class="container">
+					<h2 class="pick-text">How it works</h2>
+					<div class="line">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div>
+					<div class="section-pick-blok">
+						<div class="pick-box">
+							<span>01</span>
+							<h3 class="pick-text-box">Pick your coffee</h3>
+							<p>Select from our evolving range of artisan coffees. Our beans are ethically sourced and we
+								pay
+								fair prices for them. There are new coffees in all profiles every month for you to try
+								out.
+							</p>
+						</div>
+						<div class="pick-box">
+							<span>02</span>
+							<h3 class="pick-text-box">Choose the frequency</h3>
+							<p>Customize your order frequency, quantity, even your roast style and grind type. Pause,
+								skip
+								or cancel your subscription with no commitment through our online portal.</p>
+						</div>
+						<div class="pick-box">
+							<span>03</span>
+							<h3 class="pick-text-box">Receive and enjoy!</h3>
+							<p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning
+								world-class coffees curated to provide a distinct tasting experience.</p>
+						</div>
+					</div>
+					<div class="pick-blok-btn">
+						<a class="pick-btn" href="#">Create your plan</a>
+					</div>
+				</div>
+			</div>
 		</section>
 	</main>
+	<footer>
+		<div class="container">
+			<div class="footer-blok">
+				<div class="footer-logo">
+					<a href="./index.html"><img src="./images/logo.svg" alt=""></a>
+				</div>
+				<ul class="footer-nav">
+					<li class="footer-list"><a class="footer-item" href="#" href="#"> HOME</a></li>
+					<li class="footer-list"><a class="footer-item" href="#" href="#">ABOUT US</a> </li>
+					<li class="footer-list"><a class="footer-item" href="#" href="#">Create your plan</a> </li>
+				</ul>
+				<ul class="social">
+					<li	class="socil-item" ><a href="#"><img src="./images/facebook.svg" alt="facebook"></a></li>
+					<li	class="socil-item"><a  href="#"><img src="./images/twitter.svg" alt="twitter"></a></li>
+					<li	class="socil-item"><a href="#"><img src="./images/instagramm.svg" alt="instagramm"></a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 </body>
+
 </html>
