--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<a href="about.html">ABOUT US</a>
 						</li>
 						<li class="sitenav-item">
-							<a class="js-modal-btn" href="#">Create your plan</a>
+							<a href="./create.html">Create your plan</a>
 						</li>
 					</ul>
 				</nav>
