--- a/create.html
+++ b/create.html
@@ -44,7 +44,11 @@
                             brew method you use. For choice, for convenience, for quality.</p>
                     </div>
                     <div class="section-img create-section-img">
-                        <img src="images/create-header.jpg" width="710" height="596" alt="img-header">
+                        <img src="images/create-header.jpg" 
+                        width="710" 
+                        height="596" 
+                        srcset="./images/create-header.jpg 1x , ./images/create-header2x.png 2x"
+                        alt="img-header">
                         <div class="img"></div>
                     </div>
                 </div>
