--- a/about.html
+++ b/about.html
@@ -11,34 +11,36 @@
 </head>
 <body>
     <header class="site-header">
-		<div class="container">
-			<div class="site-header-inner">
-				<a class="logo" href="./index.html">
-					<img src="images/logo.svg" width="235" height="24" alt="site logo">
-				</a>
-				<nav class="site-nav">
-					<ul class="sitenav-list">
-						<li class="sitenav-item">
-							<a href="index.html">HOME</a>
-						</li>
-						<li class="sitenav-item">
-							<a href="about.html">ABOUT US</a>
-						</li>
-						<li class="sitenav-item">
-							<a href="./create.html">Create your plan</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+        <div class="container">
+            <div class="site-header-inner">
+                <a class="logo" href="./index.html">
+                    <img src="images/logo.svg" width="235" height="24" alt="site logo">
+                </a>
+                <nav class="site-nav">
+                    <ul class="sitenav-list">
+                        <li class="sitenav-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="sitenav-item">
+                            <a href="about.html">ABOUT US</a>
+                        </li>
+                        <li class="sitenav-item">
+                            <a href="./create.html">Create your plan</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     <section>
         <div class="main-section">
             <div class="container">
                 <div class="section-wrapper">
                     <div class="main-section-text">
                         <h1>About Us</h1>
-                        <p>Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
+                        <p>Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee
+                            from around the world. We have since been dedicated to bring the perfect cup - from bean to
+                            brew - in every shipment.</p>
                     </div>
                     <div class="section-img about-section-img">
                         <img src="images/about-img.jpg" width="710" height="596" alt="img-header">
@@ -48,5 +50,102 @@
             </div>
         </div>
     </section>
+    <section class="main-site">
+        <div class="mainsite-wrapper">
+            <div class="container">
+                <div class="about-img">
+                    <div class="main-site-title">
+                        <div class="our-commitment-title">
+                            <h2>Our commitment</h2>
+                            <p>We’re built on a simple mission and a commitment to doing good along the way. We want to
+                                make
+                                it
+                                easy for you to discover and brew the world’s best coffee at home. It all starts at the
+                                source.
+                                To locate the specific lots we want to purchase, we travel nearly 60 days a year trying
+                                to
+                                understand the challenges and opportunities in each of these places. We collaborate with
+                                exceptional coffee growers and empower a global community of farmers through with well
+                                above
+                                fair-trade benchmarks. We also offer training, support farm community initiatives, and
+                                invest in
+                                coffee plant science. Curating only the finest blends, we roast each lot to highlight
+                                tasting
+                                profiles distinctive to their native growing region.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="quality">
+        <div class="quality-wrapper">
+            <div class="container">
+                <div class="quality-title">
+                    <h2>Uncompromising quality</h2>
+                    <p>Although we work with growers who pay close attention to all stages of harvest and processing, we
+                        employ, on our end, a rigorous quality control program to avoid over-roasting or baking the
+                        coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to
+                        roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="section-pick section-about-pick">
+        <div class="container">
+            <h2 class="pick-text">Our headquarters</h2>
+            <div class="section-pick-blok about-pick">
+                <div class="pick-box about-pick-box">
+                    <h3 class="pick-text-box about-pick-text">United Kingdom</h3>
+                    <div class="about-pick-title">
+                        <p>68 Asfordby Rd
+                            Alcaston<br>
+                            SY6 1YA <br>
+                            +44 1241 918425
+                        </p>
+                    </div>
+                </div>
+                <div class="pick-box">
+                    <h3 class="pick-text-box about-pick-text">Canada</h3>
+                    <div class="about-pick-title">
+                        <p>
+                            1528 Eglinton Avenue <br>
+                            Toronto <br>
+                            Ontario M4P 1A6 <br>
+                            +1 416 485 2997</p>
+                    </div>
+                </div>
+                <div class="pick-box ">
+                    <h3 class="pick-text-box about-pick-text">Australia</h3>
+                    <div class="about-pick-title">
+                        <p>36 Swanston Street
+                            Kewell <br>
+                            Victoria <br>
+                            +61 4 9928 3629</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="footer-blok">
+                <div class="footer-logo">
+                    <a href="./index.html"><img src="./images/logo.svg" alt="site logo"></a>
+                </div>
+                <ul class="footer-nav">
+                    <li class="footer-list"><a class="footer-item" href="#"> HOME</a></li>
+                    <li class="footer-list"><a class="footer-item" href="#">ABOUT US</a> </li>
+                    <li class="footer-list"><a class="footer-item" href="#">Create your plan</a> </li>
+                </ul>
+                <ul class="social">
+                    <li class="socil-item"><a href="#"><img src="./images/facebook.svg" alt="facebook"></a></li>
+                    <li class="socil-item"><a href="#"><img src="./images/twitter.svg" alt="twitter"></a></li>
+                    <li class="socil-item"><a href="#"><img src="./images/instagramm.svg" alt="instagramm"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
